--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="google-site-verification" content="4wPp6v7pmO6R7fSfGSL_ELtbrWUZJiO6cLgZD5AFcyg" />
   <title>Classroom Webpage</title>
   <link rel="stylesheet" href="style.css">
 
@@ -237,7 +238,7 @@
 
   <section id="students">
     <h2>Students</h2>
-    <div class="card" onclick="showPopup('Ammaar&#128526;')">
+    <div class="card" onclick="showPopup('Muhammad Ammaar&#128526;')">
       <h3>Ammaar</h3>
     </div>
     <div class="card" onclick="showPopup('Muhammad Amirul Zafuan')">
@@ -312,7 +313,7 @@
         <img src="student3.jpg" alt ="Student 3">
         <h3>Farzana</h3>
     </div>
-    <div class="card" onclick="showPopup ('Aina Hazwanj')">
+    <div class="card" onclick="showPopup ('Aina Hazwani')">
         <img src="student3.jpg" alt ="Student 3">
         <h3>Hazwani</h3>
     </div>
