--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #f8e8f0, #e0f7fa, #fff3e0);
+      background: linear-gradient(135deg, #ffffff, #e0f7fa, #fff3e0);
       background-size: 400% 400%;
       animation: gradientBG 20s ease infinite;
     }
@@ -155,7 +155,7 @@
 
     /* Welcome Box Styles */
     .welcome-box {
-      background-color: #ffffffcc;
+      background-color: #b3cf99;
       padding: 25px;
       margin: 30px 0;
       border-radius: 15px;
@@ -331,144 +331,116 @@
 
   <section id="students">
     <h2>Students</h2>
-    <div class="card" onclick="showPopup('Ammaar😎')">
+    <div class="card" onclick="showPopup('Ammaar')">
       <h3>Ammaar</h3>
     </div>
     <div class="card" onclick="showPopup('Muhammad Amirul Zafuan')">
-      <img src="student2.jpg" alt="Student 2">
       <h3>Amirul</h3>
     </div>
     <div class="card" onclick="showPopup('Muhammad Izz Hazmi')">
-      <img src="IzzProfile.jpg" alt="Student Profile">
       <h3>Izz</h3>
     </div>
     <div class="card" onclick="showPopup('Hyfiy Izz Qareen')">
-      <img src="student2.jpg" alt="Student 2">
       <h3>Izz Qareen</h3>
     </div>
     <div class="card" onclick="showPopup('Nur Danish Asyraff')">
-      <img src="student2.jpg" alt="Student 2">
       <h3>Danish</h3>
     </div>
     <div class="card" onclick="showPopup('Adam Khalidshah')">
-      <img src="student2.jpg" alt="Student 2">
       <h3>Adam</h3>
     </div>
     <div class="card" onclick="showPopup('Muhammad Adam Syakir')">
-      <img src="student2.jpg" alt="Student 2">
       <h3>Syakir</h3>
     </div>
     <div class="card" onclick="showPopup('Muhammad Fakhri')">
-      <img src="student2.jpg" alt="Student 2">
       <h3>Fakhri</h3>
     </div>
     <div class="card" onclick="showPopup('Hazry Safwan')">
-      <img src="student2.jpg" alt="Student 2">
       <h3>Hazry</h3>
     </div>
     <div class="card" onclick="showPopup('Aiman Suffian')">
-      <img src="student2.jpg" alt="Student 2">
       <h3>Aiman</h3>
     </div>
     <div class="card" onclick="showPopup('Soo Ten Jun')">
-      <img src="student2.jpg" alt="Student 2">
       <h3>Ten Jun</h3>
     </div>
     <div class="card" onclick="showPopup('You Yu Zhe')">
-      <img src="student2.jpg" alt="Student 2">
       <h3>You Yu Zhe</h3>
     </div>
     <div class="card" onclick="showPopup('Darrel Abyan')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Darrel</h3>
     </div>
     <div class="card" onclick="showPopup('Yoshwein')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Yoshwein</h3>
     </div>
     <div class="card" onclick="showPopup('Adrien')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Adrien</h3>
     </div>
+   <div class="card" onclick="showPopup('Sharizzam Akmal')">
+      <h3>Akmal</h3>
+    </div>
     <div class="card" onclick="showPopup('Aria Dania')">
-      <img src="student3.jpg" alt="Student 3">
       <h3 style="color: hotpink">Aria</h3>
     </div>
     <div class="card" onclick="showPopup('Laila Zulaikha')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Laila</h3>
     </div>
     <div class="card" onclick="showPopup('Ummu Katrina')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Katrina</h3>
     </div>
     <div class="card" onclick="showPopup('Farzana')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Farzana</h3>
     </div>
-    <div class="card" onclick="showPopup('Aina Hazwanj')">
-      <img src="student3.jpg" alt="Student 3">
+    <div class="card" onclick="showPopup('Aina Hazwani')">
       <h3>Hazwani</h3>
     </div>
     <div class="card" onclick="showPopup('Fatnin Alisya')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Fatnin</h3>
     </div>
     <div class="card" onclick="showPopup('Saffa Zahra')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Saffa</h3>
     </div>
     <div class="card" onclick="showPopup('Anisa')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Anisa</h3>
     </div>
     <div class="card" onclick="showPopup('Balqis Batrisya')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Balqis</h3>
     </div>
     <div class="card" onclick="showPopup('Intan')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Intan</h3>
     </div>
     <div class="card" onclick="showPopup('Dhia Darwisyah')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Dhia</h3>
     </div>
     <div class="card" onclick="showPopup('Auni Rafiqah')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Auni</h3>
     </div>
     <div class="card" onclick="showPopup('Aina Zahirah')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Zahirah</h3>
     </div>
     <div class="card" onclick="showPopup('Lavania')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Lavania</h3>
     </div>
-    <div class="card" onclick="showPopup('Kanmanj')">
-      <img src="student3.jpg" alt="Student 3">
+    <div class="card" onclick="showPopup('Kanmani')">
       <h3>Kanmani</h3>
     </div>
-    <div class="card" onclick="showPopup('Hashinj')">
-      <img src="student3.jpg" alt="Student 3">
+    <div class="card" onclick="showPopup('Hashini')">
       <h3>Hashini</h3>
     </div>
     <div class="card" onclick="showPopup('Abhi')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Abhi</h3>
     </div>
     <div class="card" onclick="showPopup('Amuthini')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Amuthini</h3>
     </div>
     <div class="card" onclick="showPopup('Mita')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Mita</h3>
     </div>
     <div class="card" onclick="showPopup('Yew Xing Yii')">
-      <img src="student3.jpg" alt="Student 3">
       <h3>Xing Yii</h3>
+    </div>
+  <div class="card" onclick="showPopup('Iris')">
+      <h3>Iris</h3>
     </div>
   </section>
 
@@ -518,9 +490,9 @@
     <h2>LEADERBOARD</h2>
     <p>Exam Ranked</p>
     <div class="leaderboard-list">
-      <div class="leaderboard-item gold"><span>1</span><div class="name-box">Amar 🥇</div></div>
-      <div class="leaderboard-item silver"><span>2</span><div class="name-box">Amar 🥈</div></div>
-      <div class="leaderboard-item bronze"><span>3</span><div class="name-box">Amar 🥉</div></div>
+      <div class="leaderboard-item gold"><span>1</span><div class="name-box">Amar &#129351</div></div>
+      <div class="leaderboard-item silver"><span>2</span><div class="name-box">Amar &#129352</div></div>
+      <div class="leaderboard-item bronze"><span>3</span><div class="name-box">Amar &#129353</div></div>
       <div class="leaderboard-item"><span>4</span><div class="name-box">Amar</div></div>
       <div class="leaderboard-item"><span>5</span><div class="name-box">Amar</div></div>
       <div class="leaderboard-item"><span>6</span><div class="name-box">Amar</div></div>
@@ -553,6 +525,8 @@
       <div class="leaderboard-item"><span>34</span><div class="name-box">Amar</div></div>
       <div class="leaderboard-item"><span>35</span><div class="name-box">Amar</div></div>
       <div class="leaderboard-item"><span>36</span><div class="name-box">Amar</div></div>
+      <div class="leaderboard-item"><span>37</span><div class="name-box">Amar</div></div>
+      <div class="leaderboard-item"><span>38</span><div class="name-box">Amar</div></div>
     </div>
   </section>
 
